타임리프 템플릿 테스트

--- a/src/main/webapp/WEB-INF/views/boards/index.html
+++ b/src/main/webapp/WEB-INF/views/boards/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <header>
-            <a href="/">NHN Board</a> | 메인 화면
+            <a href="/">NHN Board</a> | 게시글 목록
         </header>
-        <h2><a th:href="@{/boards}">게시판 바로가기</a></h2>
+        <main>
+            게시글 목록 내용입니다.
+        </main>
     </body>
 </html>
