--- a/src/main/webapp/WEB-INF/views/includes/header.html
+++ b/src/main/webapp/WEB-INF/views/includes/header.html
@@ -2,12 +2,14 @@
 <html lang="ko" xmlns:th="http://thymeleaf.org">
     <head>
         <meta charset="UTF-8">
-        <title>NHN Board</title>
+        <title>Title</title>
     </head>
     <body>
         <header>
-            <a href="/">NHN Board</a> | 메인 화면
+            NHN Board | 게시글 목록
         </header>
-        <h2><a th:href="@{/boards}">게시판 바로가기</a></h2>
+        <main>
+            
+        </main>
     </body>
 </html>
