게시글 마크업 초안 완료

--- a/src/main/webapp/WEB-INF/views/posts/edit.html
+++ b/src/main/webapp/WEB-INF/views/posts/edit.html
@@ -4,6 +4,22 @@
         <meta charset="UTF-8">
         <title>NHN Board</title>
     </head>
+    <style>
+        body {
+            margin: 0;
+        }
+        header {
+            border: 2px solid darkgoldenrod;
+            padding: 1.5rem;
+        }
+        main {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: calc(100vh - 1.5rem);
+        }
+    </style>
     <body>
         <header>
             <a href="/">NHN Board</a> | 게시글 수정
