--- a/src/main/webapp/WEB-INF/views/posts/index.html
+++ b/src/main/webapp/WEB-INF/views/posts/index.html
@@ -9,7 +9,7 @@
             margin: 0;
         }
         header {
-            border: 2px solid darkgoldenrod;
+            border-bottom: 3px solid darkgoldenrod;
             padding: 1.5rem;
         }
         main {
