--- a/src/main/webapp/WEB-INF/views/posts/new.html
+++ b/src/main/webapp/WEB-INF/views/posts/new.html
@@ -4,15 +4,51 @@
         <meta charset="UTF-8">
         <title>NHN Board</title>
     </head>
+    <style>
+        body {
+            margin: 0;
+        }
+
+        header {
+            border: 2px solid darkgoldenrod;
+            padding: 1.5rem;
+        }
+
+        main {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: calc(100vh - 1.5rem);
+        }
+    </style>
     <body>
         <header>
             <a href="/">NHN Board</a> | 게시글 등록
         </header>
         <main>
-            <form th:action method="post">
-
+            <h1>게시글 등록하기</h1>
+            <form action="/posts/new" th:action method="post">
+                <div>
+                    <label for="post-id">글 번호</label>
+                    <input type="text" id="post-id" name="post-id" class="form-post" th:value="${post.id}" readonly>
+                </div>
+                <div>
+                    <label for="post-title">글 제목</label>
+                    <input type="text" id="post-title" name="post-title" class="form-post" th:value="${post.title}"
+                           placeholder="제목을 입력하세요.">
+                </div>
+                <div>
+                    <label for="post-content">글 내용</label>
+                    <textarea id="post-content" name="post-content" class="form-post" th:value="${post.content}"
+                              placeholder="내용을 입력하세요.">
+                </textarea>
+                </div>
+                <div>
+                    <button>등록</button>
+                    <button onclick="location.href='index.html'">취소</button>
+                </div>
             </form>
-            게시글 등록 페이지입니다.
         </main>
     </body>
 </html>
