Login Sucess Test complete

--- a/src/main/webapp/WEB-INF/views/users/login-form.html
+++ b/src/main/webapp/WEB-INF/views/users/login-form.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <form method="post" action="login">
-    ID : <input type="text" name="id"><br>
-    PW : <input type="password" name="pwd">
+    ID : <input type="text" name="username"><br>
+    PW : <input type="password" name="password">
     <input type="submit" value="로그인">
     </form>
 </body>
