--- a/src/main/webapp/WEB-INF/views/posts/post.html
+++ b/src/main/webapp/WEB-INF/views/posts/post.html
@@ -31,7 +31,7 @@
             <h2>게시글 상세</h2>
             <div>
                 <label for="post-id">글 번호</label>
-                <input type="text" id="post-id" name="post-id" class="form-post" th:value="${post.id}" readonly>
+                <input type="text" id="post-id" name="post-id" class="form-post" th:value="${post.postNo}" readonly>
             </div>
             <div>
                 <label for="post-title">글 제목</label>
@@ -44,6 +44,7 @@
                 </textarea>
             </div>
             <div>
+                <button onclick="location.href= '/posts/reply'">답글</button>
                 <button onclick="location.href='edit.html'">글 수정</button>
                 <button onclick="location.href='index.html'">글 목록으로</button>
             </div>
