게시글 전체 목록 조회 구현

--- a/src/main/webapp/WEB-INF/views/posts/index.html
+++ b/src/main/webapp/WEB-INF/views/posts/index.html
@@ -44,18 +44,15 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>2</a></td>
-                                <td><a href="/posts/2">반갑습니다. 코딩하는 락스타입니다.</a></td>
-                                <td>CoRock</td>
-                                <td>2022-05-20T10:33:00</td>
-                            </tr>
-                            <tr>
-                                <td>1</a></td>
-                                <td><a href="post.html">내가 첫 글이라니</a></td>
-                                <td>ehdgns07</td>
-                                <td>2022-05-19T10:22:00</td>
-                            </tr>
+                           <tr th:if="${#lists.size(posts) gt 0}" th:each="post : ${posts}">
+                               <td th:text="${post.postNo}">2</a></td>
+                               <td><a th:href="@{|/posts/${post.title}|}" th:text="${post.title}">반갑습니다. 코락입니다.</a></td>
+                               <td th:text="${post.username}">CoRock</td>
+                               <td th:text="${post.createdAt}">2022-05-20T10:33:00</td>
+                           </tr>
+                           <!-- <tr th:unless="${#lists.size(posts) == 0}"> -->
+                           <!--     <td colspan="4">게시글이 존재하지 않습니다.</td> -->
+                           <!-- </tr> -->
                         </tbody>
                     </table>
                 </div>
