--- a/src/main/webapp/WEB-INF/views/posts/new.html
+++ b/src/main/webapp/WEB-INF/views/posts/new.html
@@ -30,23 +30,17 @@
             <h1>게시글 등록하기</h1>
             <form action="/posts/new" th:action method="post">
                 <div>
-                    <label for="post-id">글 번호</label>
-                    <input type="text" id="post-id" name="post-id" class="form-post" th:value="${post.id}" readonly>
-                </div>
-                <div>
                     <label for="post-title">글 제목</label>
-                    <input type="text" id="post-title" name="post-title" class="form-post" th:value="${post.title}"
-                           placeholder="제목을 입력하세요.">
+                    <input type="text" id="post-title" name="post-title" class="form-post" placeholder="제목을 입력하세요.">
                 </div>
                 <div>
                     <label for="post-content">글 내용</label>
-                    <textarea id="post-content" name="post-content" class="form-post" th:value="${post.content}"
-                              placeholder="내용을 입력하세요.">
+                    <textarea id="post-content" name="post-content" class="form-post" placeholder="내용을 입력하세요.">
                 </textarea>
                 </div>
                 <div>
-                    <button>등록</button>
-                    <button onclick="location.href='index.html'">취소</button>
+                    <button type="submit">등록</button>
+                    <button th:onclick="|location.href='@{/posts}|">취소</button>
                 </div>
             </form>
         </main>
