게시글 목록 및 상세 조회 구현

--- a/src/main/webapp/WEB-INF/views/posts/index.html
+++ b/src/main/webapp/WEB-INF/views/posts/index.html
@@ -46,7 +46,7 @@
                         <tbody>
                            <tr th:if="${#lists.size(posts) gt 0}" th:each="post : ${posts}">
                                <td th:text="${post.postNo}">2</a></td>
-                               <td><a th:href="@{|/posts/${post.title}|}" th:text="${post.title}">반갑습니다. 코락입니다.</a></td>
+                               <td><a th:href="@{|/posts/${post.postNo}|}" th:text="${post.title}">반갑습니다. 코락입니다.</a></td>
                                <td th:text="${post.username}">CoRock</td>
                                <td th:text="${post.createdAt}">2022-05-20T10:33:00</td>
                            </tr>
