--- a/src/main/webapp/WEB-INF/views/posts/new.html
+++ b/src/main/webapp/WEB-INF/views/posts/new.html
@@ -31,12 +31,12 @@
             <form action="/posts/new" th:action method="post">
                 <div>
                     <label for="post-title">글 제목</label>
-                    <input type="text" id="post-title" name="post-title" class="form-post" placeholder="제목을 입력하세요.">
+                    <input type="text" id="post-title" name="title" class="form-post" placeholder="제목을 입력하세요.">
                 </div>
                 <div>
                     <label for="post-content">글 내용</label>
-                    <textarea id="post-content" name="post-content" class="form-post" placeholder="내용을 입력하세요.">
-                </textarea>
+                    <textarea id="post-content" name="content" class="form-post" placeholder="내용을 입력하세요.">
+                    </textarea>
                 </div>
                 <div>
                     <button type="submit">등록</button>
