--- a/src/main/webapp/WEB-INF/views/posts/reply.html
+++ b/src/main/webapp/WEB-INF/views/posts/reply.html
@@ -31,7 +31,8 @@
     <form action="/posts/reply" th:action method="post">
         <div>
             <label for="parent-post-id">윗글 번호</label>
-            <input type="text" id="parent-post-id" name="parent-post-id" class="form-post" th:value="${parentPostNo}" readonly>
+            <input type="text" id="parent-post-id" name="parent-post-id" class="form-post" th:value="${postNo}"
+                   readonly>
         </div>
 <!--        <div>-->
 <!--            <label for="post-id">글 번호</label>-->
