--- a/src/main/webapp/WEB-INF/views/posts/post.html
+++ b/src/main/webapp/WEB-INF/views/posts/post.html
@@ -40,8 +40,7 @@
             </div>
             <div>
                 <label for="post-content">글 내용</label>
-                <textarea width="600" id="post-content" name="content" class="form-post" th:value="${post.content}">
-                </textarea>
+                <textarea width="600" id="post-content" name="content" class="form-post" th:text="${post.content}"></textarea>
                 <input type = "hidden" name ="postGroupSeq" th:value="${post.postGroupSeq}">
             </div>
             <div>
