--- a/src/main/webapp/WEB-INF/views/posts/index.html
+++ b/src/main/webapp/WEB-INF/views/posts/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <title>NHN Board</title>
@@ -12,6 +12,7 @@
         header {
             border-bottom: 3px solid darkgoldenrod;
             padding: 1.5rem;
+            box-sizing: border-box;
         }
 
         main {
@@ -21,45 +22,76 @@
             align-items: center;
             height: calc(100vh - 1.5rem);
         }
+
+        ul {
+            display: flex;
+            list-style-type: none;
+        }
+
+        li {
+            border: 1px solid black;
+            padding: 0.5rem;
+            margin: 0.5rem;
+        }
     </style>
     <body>
         <header>
             <a href="/">NHN Board</a> | 게시글 목록
+            <button onclick="location.href='/posts/new'">
+                게시글 등록
+            </button>
         </header>
         <main>
-            <div>
-                <div>
-                    <button onclick="location.href='/posts/new'">
-                        게시글 등록
-                    </button>
-                </div>
-                <div>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>글번호</th>
-                                <th>제목</th>
-                                <th>작성자</th>
-                                <th>작성일자</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                           <tr th:if="${#lists.size(posts) gt 0}" th:each="post : ${posts}">
+            <section>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>글번호</th>
+                            <th>제목</th>
+                            <th>작성자</th>
+                            <th>작성일자</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:if="${#lists.size(posts) gt 0}" th:each="post : ${posts}">
+                            <td th:text="${post.postNo}">2</a></td>
+                            <td>
+                                <a th:href="@{/posts/{postNo} (postNo=${post.postNo})}" th:text="${post.title}">
+                                    반갑습니다. 코락입니다.
+                                </a>
+                            </td>
+                            <td th:text="${post.username}">CoRock</td>
+                            <td th:text="${post.createdAt}">2022-05-20T10:33:00</td>
+                        </tr>
+                        <!-- <tr th:unless="${#lists.size(posts) == 0}"> -->
+                        <!--     <td colspan="4">게시글이 존재하지 않습니다.</td> -->
+                        <!-- </tr> -->
+                    </tbody>
+                </table>
+            </section>
+            <nav>
+                <ul class="pagination">
+                    <li class="page-item" th:if="${pagination.prev} == true">
+                        <a class="page-link" aria-label="Previous"
+                           href="#" th:href="@{/posts/page/{pageNo} (pageNo=${pagination.startPage})}">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
 
-                               <td th:text="${post.postNo}">2</a></td>
-                               <td><a th:href="@{|/posts/${post.postNo}|}" th:text="${post.title}">반갑습니다. 코락입니다.</a></td>
+                    <!-- startpage > 2 -2   else 1     -->
+                    <li class="page-item"
+                        th:each="pageNo : ${#numbers.sequence(pagination.startPage, pagination.endPage)}">
+                        <a class="page-link" th:href="@{/posts/page/{pageNo} (pageNo=${pageNo})}" th:text="${pageNo}">1</a>
+                    </li>
 
-                               <td th:text="${post.username}">CoRock</td>
-                               <td th:text="${post.createdAt}">2022-05-20T10:33:00</td>
-
-                           </tr>
-                           <!-- <tr th:unless="${#lists.size(posts) == 0}"> -->
-                           <!--     <td colspan="4">게시글이 존재하지 않습니다.</td> -->
-                           <!-- </tr> -->
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+                    <li class="page-item" th:if="${pagination.next} == true">
+                        <a class="page-link" aria-label="Next"
+                           href="#" th:href="@{/posts/page/{pageNo} (pageNo=${pagination.endPage})}">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </main>
     </body>
 </html>
