--- a/src/main/webapp/WEB-INF/views/posts/post.html
+++ b/src/main/webapp/WEB-INF/views/posts/post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://thymeleaf.org">
+<html lang="ko" xmlns:th="http://thymeleaf.org" xmlns="http://www.w3.org/1999/html">
     <head>
         <meta charset="UTF-8">
         <title>NHN Board</title>
@@ -53,6 +53,11 @@
             </section>
             <hr>
             <section>
+                <tr th:if="${#lists.size(comment) gt 0}" th:each="comment : ${comment}">
+                    댓글 번호: <td th:text="${comment.commentNo}"></td>
+                    <td th:text="${comment.author}"></td> <td th:text="${comment.content}"></td>
+                    <button th:onclick="|location.href='@{/comment/edit/{commentNo} (commentNo=${comment.commentNo})}'|">댓글 수정</button></br>
+                </tr>
                 <h2>댓글 작성 (Comment)</h2>
                 <form method="post" action="#" th:action="@{/comment/new}">
                     <input type="hidden" name="commentNo" th:value="${post.postNo}">
